# TimedSlicer

./: merge_test.py  pyproject.toml  timed_slice.py
