[tool.poetry]
name = "timed-slice"
version = "0.1.0"
description = "A tool to create timed slice image from a sequence of images."
authors = ["Zhe Yu <zcabzyu@ucl.ac.uk>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
imgcat = "^0.5.0"
pillow = "^10.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
